test/bad/t44.zls
(* Probleme d'initialisation *)
let node f x = c where
    rec a = x
    and b = last a
    and c = x -> last b

